[package]
name = "cupcake"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "cupcake"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.24.2", features = ["init-if-needed"] }
anchor-spl = "0.24.2"
mpl-token-metadata = { version="1.2.7", features = [ "no-entrypoint" ] }
spl-token = { version="~3.2.0", features = [ "no-entrypoint" ] }
arrayref = "0.3.6"