[package]
name = "cupcake"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "cupcake"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.27.0", features = ["init-if-needed"] }
anchor-spl = "0.27.0"
mpl-token-metadata = { version = "1.9.1", features = ["no-entrypoint"] }
spl-associated-token-account = {version = "1.1.3", features = ["no-entrypoint"]}
mpl-token-auth-rules = { version = "1.3.0", features = ["no-entrypoint"] }
spl-token = { version = "3.5.0", features = ["no-entrypoint"] }
arrayref = "0.3.6"
rmp-serde = "1.1.1"